html , css and js

--- a/home.css
+++ b/home.css
@@ -1,3 +1,75 @@
+body{
+	background-color: #004c66;
+}
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+}
+
+.loading-container {
+  height: 100vh;
+  background-color: #004c66;
+  width: 100%;
+  z-index: 99999;
+  position: fixed;
+  animation:  0.1s;
+}
+@Keyframes spin{
+	100%{
+		transform: rotate(360deg);
+	}
+}
+.container{
+	width: 40px;
+  margin: 70px auto;
+  margin-top: 130px;
+}
+.dot{
+	width: 10px;
+	height: 10px;	
+	display: inline-block;
+	border-radius: 50%;
+	
+}
+.dot1{
+	background-color: #1abc9c;
+	animation: jump-up 0.6s 0.1s linear infinite;
+}
+.dot2{
+	background-color: cyan;
+	animation: jump-up 0.6s 0.2s linear infinite;
+}
+.dot3{
+	background-color: #ffd64a;
+	animation: jump-up 0.6s 0.3s linear infinite;
+}
+.dot4{
+	background-color: #e067af;
+	animation: jump-up 0.6s 0.3s linear infinite;
+}
+.dot5{
+	background-color: orange;
+	animation: jump-up 0.6s 0.0s linear infinite;
+}
+.dot6{
+	background-color: orangered;
+	animation: jump-up 0.6s 0.1s linear infinite;
+}
+
+@Keyframes jump-up{
+	50%{
+		transform: translate(0,15px);
+	}
+}
+@Keyframes pulse{
+	100%{
+		opacity: 0;
+	}
+}
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
 *{
   margin: 0;
@@ -105,7 +177,7 @@ section{
     text-decoration: none;
      
 }     
-.container{
+.containe{
     width: 1280px;
     height: 130px;
 
@@ -475,4 +547,122 @@ background: linear-gradient(to right, #0575E6, cyan); /* W3C, IE 10+/ Edge, Fire
     .ddd{
         width: 100%;
     }
+}
+body
+{
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+	background: rgb(54, 54, 54);
+
+}
+.div
+{
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%) scale(0);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	overflow: hidden;
+	border-radius: 50%;
+	box-shadow: inset 0 50px 150px rgba(0,0,0,1);
+	border-bottom: 1px solid #fff;
+	animation: animate 1s ease-in-out forwards;
+}
+@keyframes animate
+{
+	0%
+	{
+		transform: translate(-50%,-50%) scale(0);
+	}
+	100%
+	{
+		transform: translate(-50%,-50%) scale(1);
+	}
+}
+.div:nth-child(1)
+{
+	width: 1500px;
+	height: 1500px;
+	animation-delay: 0s;
+}
+.imgg{
+  height: 200px;
+  width: 200px;
+  border: transparent 2px;
+  border-style: solid;
+  border-radius: 1rem;
+}
+.imggg{
+  height: 240px;
+  width: 240px;
+  border: transparent 2px;
+  border-style: solid;
+  border-radius: 1rem;
+}
+.imgggg{
+  height: 280px;
+  width: 280px;
+  border: transparent 2px;
+  border-style: solid;
+  border-radius: 1rem;
+}
+.imggggg{
+  height: 320px;
+  width: 320px;
+  border: transparent 2px;
+  border-style: solid;
+  border-radius: 1rem;
+}
+.imgggggg{
+  height: 360px;
+  width: 360px;
+  border: transparent 2px;
+  border-style: solid;
+  border-radius: 1rem;
+}
+.div:nth-child(2)
+{
+	width: 1250px;
+	height: 1250px;
+	animation-delay: 0.5s;
+}
+.div:nth-child(3)
+{
+	width: 1000px;
+	height: 1000px;
+	animation-delay: 1s;
+}
+.div:nth-child(4)
+{
+	width: 750px;
+	height: 750px;
+	animation-delay: 1.5s;
+}
+.div:nth-child(5)
+{
+	width: 500px;
+	height: 500px;
+	animation-delay: 2s;
+}
+.div:nth-child(5) img
+{
+	max-width: 250px;
+	z-index: 1;
+	transform: translateY(500px);
+	animation: animateLogo 1s ease-in-out forwards;
+	animation-delay: 3s;
+}
+@keyframes animateLogo
+{
+	0%
+	{
+		transform: translateY(500px);
+	}
+	100%
+	{
+		transform: translateY(0px);
+	}
 }
