--- a/home.css
+++ b/home.css
@@ -1,5 +1,5 @@
 body{
-	background-color: #004c66;
+	background-color: #0082e6;
 }
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
 *{
