--- a/index.css
+++ b/index.css
@@ -907,3 +907,15 @@ background: linear-gradient(to right, #0575E6, cyan); /* W3C, IE 10+/ Edge, Fire
     }
     
 }
+@media screen and (max-width:5000px) {
+    .edwi{
+        margin-left: 10%;
+        width: 80%;
+    }
+    .vidul{
+        text-align: center;
+        margin-left: 15%;
+        margin-right: 15%;
+    }
+}
+
